--- a/package.json
+++ b/package.json
@@ -16,8 +16,12 @@
   "devDependencies": {
     "@types/node": "17.0.21",
     "@types/react": "17.0.39",
+    "autoprefixer": "^10.4.2",
     "eslint": "8.10.0",
     "eslint-config-next": "12.1.0",
+    "hyperdocs-cli": "^0.0.5",
+    "postcss": "^8.4.7",
+    "tailwindcss": "^3.0.23",
     "typescript": "4.5.5"
   }
 }
